[workspace]
members = [ 
    "client",
    "protocol/open_index_lib",
    "protocol/programs/open_index",
    "protocol/programs/modules/issuance", 
    "protocol/tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
