[workspace]
members = [ 
    "protocol/programs/openindex",
    # "protocol/programs/modules/issuance", 
    "protocol/sdk",
    "protocol/tests/program_test",
    "protocol/tests/test-validator", 
    ]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
 