[workspace]
members = [ "protocol/programs/modules/issuance", 
    "protocol/programs/openindex",
    "protocol/sdk",
    "protocol/tests/program_test",
    "protocol/tests/test-validator", 
    ]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
borsh = "1.5.6"
borsh-derive = "1.5.6"
solana-program = "2.2.1"
spl-token = { version = "8.0.0"}
spl-associated-token-account = { version = "6.0.0" }
thiserror = "2.0.12"