[package]
name = "open_index_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.6"
borsh-derive = "1.5.6"
solana-program = "2.2.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "2.0.12"
