[package]
name = "openindex-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
openindex = []
openindex-pda=["openindex"]
openindex-state=["openindex"]
openindex-transaction=["openindex","solana-sdk"]
openindex-error=["openindex"]
openindex-instruction=["openindex"]
openindex-seeds=["openindex"]
issuance = []

[dependencies]
solana-sdk ={ version = "2.2.2", optional = true }
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "2.2.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "2.0.12"
num-derive = "0.4.2"
num-traits = "0.2.19"
