[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
open_index = {version= "0.1.0", path ="../programs/open_index"}
open_index_lib = {version= "0.1.0", path ="../open_index_lib"}
solana-program = "2.2.1"
solana-program-test = "2.2.7"
solana-sdk = "2.2.2" 
spl-token = "8.0.0"
borsh = "1.5.6"
borsh-derive = "1.5.6"
num-derive = "0.4"
num-traits = "0.2"
