[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
openindex = {version= "0.1.0", path ="../../programs/openindex"} 
openindex-sdk = {version= "0.1.0", path ="../../sdk", features=["openindex-transaction"]}
solana-program = "2.2.1"
 
solana-sdk = "2.2.2" 
spl-token = "8.0.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
borsh = "1.5.6"
borsh-derive = "1.5.6"
num-derive = "0.4"
num-traits = "0.2"
serde   = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
solana-address-lookup-table-program ="2.2.7"
solana-program-test = "2.2.7"
