[package]
name = "test-validator"
version = "0.1.0"
edition = "2024"

[features]
test-validator = []    # ✅ correct


[dependencies]
anyhow = "1.0.97"
borsh = "1.5.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-program = "2.2.1"
open_index = {version= "0.1.0", path ="../../programs/open_index"}
issuance =   {version= "0.1.0", path ="../../programs/modules/issuance"}
open_index_lib = {version= "0.1.0", path ="../../open_index_lib"}
tokio = "1.44.2"
