[package]
name = "test-validator"
version = "0.1.0"
edition = "2021"

[features]
test-validator = []    # ✅ correct


[dependencies]
anyhow = "1.0.97"
borsh = "1.5.6"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-program = "2.2.1"
openindex = {version= "0.1.0", path ="../../programs/openindex"} 
openindex-sdk = {version= "0.1.0", path ="../../sdk", features=["openindex-transaction"]}
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
tokio = "1.44.2"
spl-token = "8.0.0"
mpl-token-metadata = "5.1.0"
