[package]
name = "issuance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = {workspace = true}
borsh-derive = {workspace = true}
solana-program = {workspace = true}
openindex-sdk= {path="../../../sdk/", version="0.1.0", default-features = false,  features = [ "no-entrypoint","issuance-error" ,"issuance-pda","issuance-seeds","issuance-state","openindex-instruction","openindex-state","openindex-seeds","openindex-error","openindex-pda"]}